# ibex-geometry

./: CMakeLists.txt
CMakeModules/: FindIbexLib.cmake
src/polygon/: ibex_PdcInPolygon.cpp  ibex_PdcInPolygon.h  ibex_SepPolygon.h
tests/: CMakeLists.txt  TestSepPolygon.cpp
